[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fnt/Roboto_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fnt/Roboto_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/tex/gui.png" type="Texture" id=3]
[ext_resource path="res://scenes/end_task_popup.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 2, 2, 16, 16 )

[node name="end_task_popup" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = SubResource( 1 )
expand = true
script = ExtResource( 4 )

[node name="title" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Task complete"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="work_time" type="Label" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 710.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 2 )
text = "Work time: 99 rounds x 25 minutes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="break_time" type="Label" parent="."]
margin_left = 10.0
margin_top = 130.0
margin_right = 710.0
margin_bottom = 163.0
custom_fonts/font = ExtResource( 2 )
text = "Break time: 99 rounds x 5 minutes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_time" type="Label" parent="."]
margin_left = 10.0
margin_top = 200.0
margin_right = 710.0
margin_bottom = 257.0
custom_fonts/font = ExtResource( 1 )
text = "Total time: 999 minutes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok_btn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 100.0
margin_right = 90.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 2 )
text = "OK"
